# airas-20251113-053955-Improving-efficiency-a

./: pyproject.toml
.research/: research_history.json
.research/latex/agents4science_2025/: paper.tex  references.bib
.research/prompt/analytic_subgraph/: analytic_node.txt
.research/prompt/create_bibfile_subgraph/: filter_references.txt
.research/prompt/create_code_subgraph/: derive_specific_experiments_exp-1-main-multitask.txt  derive_specific_experiments_exp-2-robustness-efficiency.txt  generate_base_code.txt  validate_base_code.txt  validate_experiment_code_exp-1-main-multitask.txt  validate_experiment_code_exp-2-robustness-efficiency.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_strategy.txt  generate_experiments.txt
.research/prompt/create_method_subgraph_v2/: evaluate_novelty_and_significance.txt  generate_idea_and_research_summary.txt
.research/prompt/evaluate_experimental_consistency_subgraph/: evaluate_experimental_consistency_exp-1-main-multitask.txt  evaluate_experimental_consistency_exp-2-robustness-efficiency.txt
.research/prompt/extract_reference_titles_subgraph/: extract_reference_titles_0.txt  extract_reference_titles_1.txt
.research/prompt/latex_subgraph/: convert_to_latex_str.txt
.research/prompt/retrieve_code_subgraph/: extract_experimental_info_0.txt  extract_github_url_from_text_0.txt
.research/prompt/retrieve_hugging_face_subgraph/: extract_code_in_readme_model_0.txt
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+3 files in other folders)
